"""Tests for qr_sampler.config module.

Covers: default values, env var loading, per-request resolution,
non-overridable field rejection, validate_extra_args, type coercion,
and invalid key detection.
"""

from __future__ import annotations

import os
from typing import Any
from unittest.mock import patch

import pytest

from qr_sampler.config import (
    _ALL_FIELDS,
    _PER_REQUEST_FIELDS,
    QRSamplerConfig,
    resolve_config,
    validate_extra_args,
)
from qr_sampler.exceptions import ConfigValidationError

# ---------------------------------------------------------------------------
# Default values
# ---------------------------------------------------------------------------


class TestDefaults:
    """Verify all fields have the expected default values."""

    def test_infrastructure_defaults(self, default_config: QRSamplerConfig) -> None:
        assert default_config.grpc_server_address == "localhost:50051"
        assert default_config.grpc_timeout_ms == 5000.0
        assert default_config.grpc_retry_count == 2
        assert default_config.grpc_mode == "unary"
        assert default_config.grpc_method_path == "/qr_entropy.EntropyService/GetEntropy"
        assert default_config.grpc_stream_method_path == "/qr_entropy.EntropyService/StreamEntropy"
        assert default_config.grpc_api_key == ""
        assert default_config.grpc_api_key_header == "api-key"
        assert default_config.fallback_mode == "system"
        assert default_config.entropy_source_type == "system"

    def test_amplification_defaults(self, default_config: QRSamplerConfig) -> None:
        assert default_config.signal_amplifier_type == "zscore_mean"
        assert default_config.sample_count == 20480
        assert default_config.population_mean == 127.5
        assert default_config.population_std == pytest.approx(73.61215932167728)
        assert default_config.uniform_clamp_epsilon == 1e-10

    def test_temperature_defaults(self, default_config: QRSamplerConfig) -> None:
        assert default_config.temperature_strategy == "fixed"
        assert default_config.fixed_temperature == 0.7
        assert default_config.edt_base_temp == 0.8
        assert default_config.edt_exponent == 0.5
        assert default_config.edt_min_temp == 0.1
        assert default_config.edt_max_temp == 2.0

    def test_selection_defaults(self, default_config: QRSamplerConfig) -> None:
        assert default_config.top_k == 0
        assert default_config.top_p == 1.0

    def test_logging_defaults(self, default_config: QRSamplerConfig) -> None:
        assert default_config.log_level == "summary"
        assert default_config.diagnostic_mode is False


# ---------------------------------------------------------------------------
# Environment variable loading
# ---------------------------------------------------------------------------


class TestEnvVarLoading:
    """Verify that QR_* env vars are picked up correctly."""

    def test_string_env_var(self) -> None:
        with patch.dict(os.environ, {"QR_GRPC_SERVER_ADDRESS": "myhost:9999"}):
            config = QRSamplerConfig(_env_file=None)  # type: ignore[call-arg]
        assert config.grpc_server_address == "myhost:9999"

    def test_float_env_var(self) -> None:
        with patch.dict(os.environ, {"QR_GRPC_TIMEOUT_MS": "1234.5"}):
            config = QRSamplerConfig(_env_file=None)  # type: ignore[call-arg]
        assert config.grpc_timeout_ms == 1234.5

    def test_int_env_var(self) -> None:
        with patch.dict(os.environ, {"QR_SAMPLE_COUNT": "100"}):
            config = QRSamplerConfig(_env_file=None)  # type: ignore[call-arg]
        assert config.sample_count == 100

    def test_bool_env_var_true(self) -> None:
        with patch.dict(os.environ, {"QR_DIAGNOSTIC_MODE": "true"}):
            config = QRSamplerConfig(_env_file=None)  # type: ignore[call-arg]
        assert config.diagnostic_mode is True

    def test_bool_env_var_false(self) -> None:
        with patch.dict(os.environ, {"QR_DIAGNOSTIC_MODE": "false"}):
            config = QRSamplerConfig(_env_file=None)  # type: ignore[call-arg]
        assert config.diagnostic_mode is False

    def test_multiple_env_vars(self) -> None:
        env = {
            "QR_TOP_K": "100",
            "QR_TOP_P": "0.95",
            "QR_TEMPERATURE_STRATEGY": "edt",
        }
        with patch.dict(os.environ, env):
            config = QRSamplerConfig(_env_file=None)  # type: ignore[call-arg]
        assert config.top_k == 100
        assert config.top_p == 0.95
        assert config.temperature_strategy == "edt"

    def test_grpc_method_path_env_var(self) -> None:
        with patch.dict(os.environ, {"QR_GRPC_METHOD_PATH": "/qrng.QuantumRNG/GetRandomBytes"}):
            config = QRSamplerConfig(_env_file=None)  # type: ignore[call-arg]
        assert config.grpc_method_path == "/qrng.QuantumRNG/GetRandomBytes"

    def test_grpc_stream_method_path_env_var(self) -> None:
        with patch.dict(os.environ, {"QR_GRPC_STREAM_METHOD_PATH": ""}):
            config = QRSamplerConfig(_env_file=None)  # type: ignore[call-arg]
        assert config.grpc_stream_method_path == ""

    def test_grpc_api_key_env_var(self) -> None:
        with patch.dict(os.environ, {"QR_GRPC_API_KEY": "test-key-123"}):
            config = QRSamplerConfig(_env_file=None)  # type: ignore[call-arg]
        assert config.grpc_api_key == "test-key-123"

    def test_grpc_api_key_header_env_var(self) -> None:
        with patch.dict(os.environ, {"QR_GRPC_API_KEY_HEADER": "authorization"}):
            config = QRSamplerConfig(_env_file=None)  # type: ignore[call-arg]
        assert config.grpc_api_key_header == "authorization"

    def test_non_qr_env_vars_ignored(self) -> None:
        with patch.dict(os.environ, {"OTHER_TOP_K": "999"}):
            config = QRSamplerConfig(_env_file=None)  # type: ignore[call-arg]
        assert config.top_k == 0  # Unchanged default


# ---------------------------------------------------------------------------
# Per-request config resolution
# ---------------------------------------------------------------------------


class TestResolveConfig:
    """Verify resolve_config creates correct new configs from extra_args."""

    def test_no_extra_args_returns_same(self, default_config: QRSamplerConfig) -> None:
        result = resolve_config(default_config, None)
        assert result is default_config

    def test_empty_extra_args_returns_same(self, default_config: QRSamplerConfig) -> None:
        result = resolve_config(default_config, {})
        assert result is default_config

    def test_non_qr_keys_ignored(self, default_config: QRSamplerConfig) -> None:
        result = resolve_config(default_config, {"other_key": 42})
        assert result is default_config

    def test_single_override(self, default_config: QRSamplerConfig) -> None:
        result = resolve_config(default_config, {"qr_top_k": 100})
        assert result.top_k == 100
        assert result is not default_config

    def test_multiple_overrides(self, default_config: QRSamplerConfig) -> None:
        result = resolve_config(
            default_config,
            {
                "qr_top_k": 100,
                "qr_top_p": 0.95,
                "qr_fixed_temperature": 1.0,
            },
        )
        assert result.top_k == 100
        assert result.top_p == 0.95
        assert result.fixed_temperature == 1.0

    def test_original_unchanged(self, default_config: QRSamplerConfig) -> None:
        resolve_config(default_config, {"qr_top_k": 100})
        assert default_config.top_k == 0  # Original unchanged

    def test_mixed_qr_and_non_qr_keys(self, default_config: QRSamplerConfig) -> None:
        result = resolve_config(
            default_config,
            {
                "qr_top_k": 100,
                "other_key": 42,
            },
        )
        assert result.top_k == 100

    def test_all_per_request_fields_overridable(self, default_config: QRSamplerConfig) -> None:
        """Every field in _PER_REQUEST_FIELDS should be overridable."""
        for field_name in _PER_REQUEST_FIELDS:
            key = f"qr_{field_name}"
            # Use a value that's different from default
            field_info = QRSamplerConfig.model_fields[field_name]
            default_val = field_info.default
            if isinstance(default_val, bool):
                override_val: Any = not default_val
            elif isinstance(default_val, int):
                override_val = default_val + 1
            elif isinstance(default_val, float):
                override_val = default_val + 0.1
            elif isinstance(default_val, str):
                override_val = default_val + "_test"
            else:
                continue

            result = resolve_config(default_config, {key: override_val})
            assert getattr(result, field_name) == override_val, f"Failed to override {field_name}"

    def test_type_coercion_string_to_int(self, default_config: QRSamplerConfig) -> None:
        """Pydantic should coerce '100' to int 100."""
        result = resolve_config(default_config, {"qr_top_k": "100"})
        assert result.top_k == 100
        assert isinstance(result.top_k, int)

    def test_type_coercion_string_to_float(self, default_config: QRSamplerConfig) -> None:
        """Pydantic should coerce '0.95' to float 0.95."""
        result = resolve_config(default_config, {"qr_top_p": "0.95"})
        assert result.top_p == 0.95

    def test_type_coercion_string_to_bool(self, default_config: QRSamplerConfig) -> None:
        """Pydantic should coerce 'true' to True."""
        result = resolve_config(default_config, {"qr_diagnostic_mode": "true"})
        assert result.diagnostic_mode is True


# ---------------------------------------------------------------------------
# Non-overridable field rejection
# ---------------------------------------------------------------------------


class TestNonOverridableFields:
    """Verify that infrastructure fields cannot be overridden per-request."""

    @pytest.mark.parametrize(
        "field_name",
        [
            "grpc_server_address",
            "grpc_timeout_ms",
            "grpc_retry_count",
            "grpc_mode",
            "grpc_method_path",
            "grpc_stream_method_path",
            "grpc_api_key",
            "grpc_api_key_header",
            "fallback_mode",
            "entropy_source_type",
        ],
    )
    def test_infrastructure_field_rejected(
        self, default_config: QRSamplerConfig, field_name: str
    ) -> None:
        key = f"qr_{field_name}"
        with pytest.raises(ConfigValidationError, match="infrastructure field"):
            resolve_config(default_config, {key: "some_value"})

    @pytest.mark.parametrize(
        "field_name",
        [
            "grpc_server_address",
            "grpc_timeout_ms",
            "grpc_retry_count",
            "grpc_mode",
            "grpc_method_path",
            "grpc_stream_method_path",
            "grpc_api_key",
            "grpc_api_key_header",
            "fallback_mode",
            "entropy_source_type",
        ],
    )
    def test_infrastructure_field_rejected_in_validate(self, field_name: str) -> None:
        key = f"qr_{field_name}"
        with pytest.raises(ConfigValidationError, match="infrastructure field"):
            validate_extra_args({key: "some_value"})


# ---------------------------------------------------------------------------
# validate_extra_args
# ---------------------------------------------------------------------------


class TestValidateExtraArgs:
    """Test the standalone validation function."""

    def test_valid_keys_pass(self) -> None:
        validate_extra_args({"qr_top_k": 100, "qr_top_p": 0.95})

    def test_non_qr_keys_ignored(self) -> None:
        validate_extra_args({"other_key": 42, "another": "value"})

    def test_unknown_field_raises(self) -> None:
        with pytest.raises(ConfigValidationError, match="Unknown config field"):
            validate_extra_args({"qr_nonexistent_field": 42})

    def test_empty_args_pass(self) -> None:
        validate_extra_args({})

    def test_mixed_valid_and_non_qr_keys(self) -> None:
        validate_extra_args({"qr_top_k": 100, "other": 42})


# ---------------------------------------------------------------------------
# Field set consistency
# ---------------------------------------------------------------------------


class TestFieldSets:
    """Verify internal field sets are consistent."""

    def test_per_request_fields_are_subset_of_all(self) -> None:
        assert _PER_REQUEST_FIELDS <= _ALL_FIELDS

    def test_infrastructure_fields_not_in_per_request(self) -> None:
        infra_fields = _ALL_FIELDS - _PER_REQUEST_FIELDS
        assert "grpc_server_address" in infra_fields
        assert "grpc_timeout_ms" in infra_fields
        assert "grpc_retry_count" in infra_fields
        assert "grpc_mode" in infra_fields
        assert "grpc_method_path" in infra_fields
        assert "grpc_stream_method_path" in infra_fields
        assert "grpc_api_key" in infra_fields
        assert "grpc_api_key_header" in infra_fields
        assert "fallback_mode" in infra_fields
        assert "entropy_source_type" in infra_fields

    def test_all_fields_populated(self) -> None:
        """_ALL_FIELDS should contain every model field."""
        assert frozenset(QRSamplerConfig.model_fields.keys()) == _ALL_FIELDS


# ---------------------------------------------------------------------------
# Init kwargs override
# ---------------------------------------------------------------------------


class TestInitKwargs:
    """Verify that constructor kwargs take highest priority."""

    def test_init_kwargs_override_defaults(self) -> None:
        config = QRSamplerConfig(top_k=200, _env_file=None)  # type: ignore[call-arg]
        assert config.top_k == 200

    def test_init_kwargs_override_env_vars(self) -> None:
        with patch.dict(os.environ, {"QR_TOP_K": "100"}):
            config = QRSamplerConfig(top_k=200, _env_file=None)  # type: ignore[call-arg]
        assert config.top_k == 200


# ---------------------------------------------------------------------------
# Extra="ignore" behavior
# ---------------------------------------------------------------------------


class TestExtraIgnore:
    """Verify that unknown fields in constructor are ignored."""

    def test_unknown_kwargs_ignored(self) -> None:
        config = QRSamplerConfig(
            unknown_field="value",
            _env_file=None,  # type: ignore[call-arg]
        )
        assert not hasattr(config, "unknown_field")


# ---------------------------------------------------------------------------
# Model copy behavior
# ---------------------------------------------------------------------------


class TestModelCopy:
    """Verify that model_copy creates independent instances."""

    def test_model_copy_creates_new_instance(self, default_config: QRSamplerConfig) -> None:
        copy = default_config.model_copy(update={"top_k": 200})
        assert copy is not default_config
        assert copy.top_k == 200
        assert default_config.top_k == 0

    def test_model_copy_preserves_unmodified(self, default_config: QRSamplerConfig) -> None:
        copy = default_config.model_copy(update={"top_k": 200})
        assert copy.top_p == default_config.top_p
        assert copy.fixed_temperature == default_config.fixed_temperature
        assert copy.grpc_server_address == default_config.grpc_server_address
